- 
    Bug 
- 
    Resolution: Fixed
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 10.0.1
- 
    None
- 
        
- 
        cd70d10dc (11.0)
To reproduce:
1. Open Search pane (Ctrl + Shift + F)
2. Scope: "Find in File System"
3. SearchEngine: "Silver Searcher"
4. Directory : Point into your home dir
5. Search for: "a"
6. Press "Search"
7. Wait about 10 - 15 seconds for a crash
The Qt assert is being issued on the crash:
ASSERT: "len >= 0" in file /home/jarek/dev/qt-64/qtbase/src/corelib/text/qbytearrayview.h, line 137
Update: It looks like the data size reported by the Process is bigger than 2.5 GB, and the crash happens in: QTextCodec::toUnicode() when calling Process::stdOut().
| For Gerrit Dashboard: QTCREATORBUG-29130 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 481179,6 | SilverSearcher: Don't crash on giant output from ag | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |