SilverSearcher: Don't crash on giant output from ag

Make cancel and continue button working. Make pausing
above 200000 hits working.

Fixes: QTCREATORBUG-29130
Change-Id: I55429ae1b4d80dacfcd7e8366133657d0c44a0d6
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>